--- a/src/os2datascanner/projects/report/locale/da/LC_MESSAGES/django.po
+++ b/src/os2datascanner/projects/report/locale/da/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-13 14:12+0100\n"
+"POT-Creation-Date: 2023-12-15 09:26+0100\n"
 "Language: Danish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1041,8 +1041,8 @@ msgstr ""
 msgid ""
 "By checking this box, you allow OSdatascanner to categorize your emails."
 msgstr ""
-"Ved at sætte flueben i denne boks, tillader du OSdatascanner at "
-"kategorisere dine emails."
+"Ved at sætte flueben i denne boks, tillader du OSdatascanner at kategorisere "
+"dine emails."
 
 #: reportapp/templates/components/user/outlook_category_settings.html:36
 msgid "Match category colour"
