--- a/src/os2datascanner/projects/admin/locale/da/LC_MESSAGES/django.po
+++ b/src/os2datascanner/projects/admin/locale/da/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-15 10:04+0100\n"
+"POT-Creation-Date: 2023-12-15 14:04+0100\n"
 "PO-Revision-Date: 2021-08-07 09:10+0200\n"
 "Last-Translator: Magenta Aps\n"
 "Language-Team: 2. sal\n"
@@ -1171,8 +1171,8 @@ msgid ""
 "OSdatascanner was not able to delete the results from the stale accounts, "
 "since the scannerjob is currently running. Try again later."
 msgstr ""
-"OSdatascanner kunne ikke slette resultaterne tilhørende de frakoblede "
-"konti, da scannerjobbet i øjeblikket er i gang. Prøv igen senere."
+"OSdatascanner kunne ikke slette resultaterne tilhørende de frakoblede konti, "
+"da scannerjobbet i øjeblikket er i gang. Prøv igen senere."
 
 #: adminapp/templates/components/scanner/scanner_cleanup_response.html:24
 msgid "Stale accounts cleaned!"
